add thumbnail and header for each first letter of contributor name

--- a/Contributors.html
+++ b/Contributors.html
@@ -115,10 +115,40 @@
       </div>
       <p class="rubberBand delay-4s">Add yourself to the list if you contribute.</p>
       <hr style="width:80%">
-    </div>
-    <div class="box mx-auto">
 
-      <!-- Add your name to the list of contributors each in alphabetical order -->
+      <div class="box mx-auto">
+        <a class="box-item" href="#tag-a"><span>A</span></a>
+        <a class="box-item" href="#tag-b"><span>B</span></a>
+        <a class="box-item" href="#tag-c"><span>C</span></a>
+        <a class="box-item" href="#tag-d"><span>D</span></a>
+        <a class="box-item" href="#tag-e"><span>E</span></a>
+        <a class="box-item" href="#tag-f"><span>F</span></a>
+        <a class="box-item" href="#tag-g"><span>G</span></a>
+        <a class="box-item" href="#tag-h"><span>H</span></a>
+        <a class="box-item" href="#tag-i"><span>I</span></a>
+        <a class="box-item" href="#tag-j"><span>J</span></a>
+        <a class="box-item" href="#tag-k"><span>K</span></a>
+        <a class="box-item" href="#tag-l"><span>L</span></a>
+        <a class="box-item" href="#tag-m"><span>M</span></a>
+        <a class="box-item" href="#tag-n"><span>N</span></a>
+        <a class="box-item" href="#tag-o"><span>O</span></a>
+        <a class="box-item" href="#tag-p"><span>P</span></a>
+        <a class="box-item" href="#tag-q"><span>Q</span></a>
+        <a class="box-item" href="#tag-r"><span>R</span></a>
+        <a class="box-item" href="#tag-s"><span>S</span></a>
+        <a class="box-item" href="#tag-t"><span>T</span></a>
+        <a class="box-item" href="#tag-u"><span>U</span></a>
+        <a class="box-item" href="#tag-v"><span>V</span></a>
+        <a class="box-item" href="#tag-w"><span>W</span></a>
+        <a class="box-item" href="#tag-x"><span>X</span></a>
+        <a class="box-item" href="#tag-y"><span>Y</span></a>
+        <a class="box-item" href="#tag-z"><span>Z</span></a>
+      </div>
+    </div>
+    
+    <!-- Add your name to the list of contributors each in alphabetical order -->
+    <h2 id="tag-a">A</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/aaq007"><span>Aaqil Shihab</span></a>
       <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
       <a class="box-item" href="https://github.com/Aashu23"><span>Aashu</span></a>
@@ -164,14 +194,26 @@
       <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a>
       <a class="box-item" href="https://github.com/AyushAKumar-19"><span>Ayush Abhishek Kumar</span></a>
       <a class="box-item" href="https://github.com/a-ayush19"><span>Ayush Awasthi</span></a>
+    </div>
+
+    <h2 id="tag-b">B</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/bharath-acchu"><span>Bharath C S</span></a>
       <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
+    </div>
+
+    <h2 id="tag-c">C</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/chaitanyatekane"><span>Chaitanya</span></a>
       <a class="box-item" href="https://github.com/KVChandrashekar"><span>Chandrashekar K V</span></a>
       <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>
       <a class="box-item" href="https://github.com/christianwidjayaa"><span>Christian Widjaya</span></a>
       <a class="box-item" href="https://github.com/cee-elle"><span>Cindy Le</span></a>
+    </div>
+
+    <h2 id="tag-d">D</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/drashevsky"><span>Daniel Rashevsky</span></a>
       <a class="box-item" href="https://github.com/Davjot"><span>Davjot Singh</span></a>
       <a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
@@ -179,16 +221,32 @@
       <a class="box-item" href="https://github.com/dwiguna81"><span>Dwi Guna</span></a>
       <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
       <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
+    </div>
+
+    <h2 id="tag-e">E</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a>
       <a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
       <a class="box-item" href="https://github.com/pepeyen"><span>Erick Frederick</span></a>
+    </div>
+
+    <h2 id="tag-f">F</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
       <a class="box-item" href="https://github.com/faizalanwar"><span>faizalanwar</span></a>
       <a class="box-item" href="https://github.com/Frostbite22"><span>Fares Landoulsi</span></a>
       <a class="box-item" href="https://github.com/FarhanFDjabari"><span>Farhan Fadhilah Djabari</span></a>
       <a class="box-item" href="https://github.com/fikriks"><span>Fikri Khairul Shaleh</span></a>
+    </div>
+
+    <h2 id="tag-g">G</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/sreelakshmig009"><span>G Sreelakshmi</span></a>
       <a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
+    </div>
+
+    <h2 id="tag-h">H</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
       <a class="box-item" href="https://github.com/HarshitAditya27"><span>Harshit Aditya</span></a>
@@ -196,10 +254,18 @@
       <a class="box-item" href="https://github.com/haylzrandom"><span>Haylzrandom</span></a>
       <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
       <a class="box-item" href="https://github.com/husinassegaff"><span>Husin Muhammad Assegaff</span></a>
+    </div>
+
+    <h2 id="tag-i">I</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a>
       <a class="box-item" href="https://github.com/ishaan-10"><span>Ishaan</span></a>
       <a class="box-item" href="https://github.com/ishaan-1n"><span>Ishaan</span></a>
       <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
+    </div>
+
+    <h2 id="tag-j">J</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/jash-kothari"><span>Jash Kothari</span></a>
       <a class="box-item" href="https://github.com/Jatinkumar30"><span>Jatin Kumar</span></a>
       <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
@@ -209,6 +275,10 @@
       <a class="box-item" href="https://github.com/JoaoJesus94"><span>João Jesus</span></a>
       <a class="box-item" href="https://github.com/juanpablohuertas"><span>Juan Pablo Huertas</span></a>
       <a class="box-item" href="https://github.com/JuniorXcoder"><span>JuniorXcoder</span></a>
+    </div>
+
+    <h2 id="tag-k">K</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/Kaustubh251002"><span>Kaustubh Mishra</span></a>
       <a class="box-item" href="https://github.com/keerays"><span>Keerays</span></a>
       <a class="box-item" href="https://github.com/kingketan9"><span>Ketan Goyal</span></a>
@@ -223,9 +293,17 @@
       <a class="box-item" href="https://github.com/Krutarth06"><span>Krutarth Trivedi</span></a>
       <a class="box-item" href="https://github.com/jkunal14"><span>Kunal Jindal</span></a>
       <a class="box-item" href="https://github.com/kushagra1912"><span>Kushagra Agrawal</span></a>
+    </div>
+
+    <h2 id="tag-l">L</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/nguyenlamspk"><span>Lam Nguyen</span></a>
       <a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
       <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
+    </div>
+
+    <h2 id="tag-m">M</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/MFR414"><span>M Firmansyah Rifai</span></a>
       <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
       <a class="box-item" href="https://github.com/MahimaKhatri"><span>Mahima Khatri</span></a>
@@ -244,6 +322,10 @@
       <a class="box-item" href="https://github.com/mofazil17"><span>Mohamed Fazil</span></a>
       <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
       <a class="box-item" href="https://github.com/Brougud"><span>Monke</span></a>
+    </div>
+
+    <h2 id="tag-n">N</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/naman360"><span>Naman Shankhydhar</span></a>
       <a class="box-item" href="https://github.com/naman74"><span>Naman</span></a>
       <a class="box-item" href="https://github.com/NavdeepSinghBagga"><span>Navdeep Singh Bagga</span></a>
@@ -256,9 +338,17 @@
       <a class="box-item" href="https://github.com/NitulKalita"><span>Nitul</span></a>
       <a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
       <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
+    </div>
+
+    <h2 id="tag-o">O</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/OmanshArora"><span>Omansh</span></a>
       <a class="box-item" href="https://github.com/omrobbie"><span>omrobbie</span></a>
       <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
+    </div>
+
+    <h2 id="tag-p">P</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/paarth17032000"><span>Paarth Agarwal</span></a>
       <a class="box-item" href="https://github.com/Palaksharma23"><span>Palak Sharma</span></a>
       <a class="box-item" href="https://github.com/panchadeep"><span>Panchadeep Mazumder</span></a>
@@ -274,7 +364,15 @@
       <a class="box-item" href="https://github.com/pravigya"><span>Pravigya jain</span></a>
       <a class="box-item" href="https://github.com/Priyanshi-Raj"><span>Priyanshi Raj</span></a>
       <a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
+    </div>
+
+    <h2 id="tag-q">Q</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a>
+    </div>
+
+    <h2 id="tag-r">R</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/RahulRudra81"><span>Rahul Rudra</span></a>
       <a class="box-item" href="https://github.com/Hackerrcracker"><span>Rahul Sharma</span></a>
       <a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
@@ -292,6 +390,10 @@
       <a class="box-item" href="https://github.com/Red-0111"><span>Rudransh</span></a>
       <a class="box-item" href="https://github.com/todoroki07"><span>Rufus</span></a>
       <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
+    </div>
+
+    <h2 id="tag-s">S</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/sabry2020"><span>Sabry</span></a>
       <a class="box-item" href="https://github.com/SamarthSawhney"><span>Samarth Sawhney</span></a>
       <a class="box-item" href="https://github.com/SamarthSawhney"><span>Samarth Sawhney</span></a>
@@ -327,6 +429,10 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/proghead00"><span>Susnata Goswami</span></a>
       <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
+    </div>
+
+    <h2 id="tag-t">T</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/tandrimasingha"><span>Tandrima Singha</span></a>
       <a class="box-item" href="https://github.com/tanishha"><span>Tanisha Chaudhary</span></a>
       <a class="box-item" href="https://github.com/Tejaswi-Kumar"><span>Tejaswi Kumar</span></a>
@@ -336,7 +442,15 @@
       <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
       <a class="box-item" href="https://github.com/shinigamiii07"><span>Trideep</span></a>
       <a class="box-item" href="https://github.com/tuminzee"><span>Tumin Sheth</span></a>
+    </div>
+
+    <h2 id="tag-u">U</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/utsaverma2001-crypto"><span>Utsav Verma</span></a>
+    </div>
+
+    <h2 id="tag-v">V</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/vakilsahabh"><span>Vakeel Sahabh</span></a>
       <a class="box-item" href="https://github.com/vatsal259"><span>Vatsal Verma</span></a>
       <a class="box-item" href="https://github.com/VibhuGautam"><span>Vibhu Gautam</span></a>
@@ -351,17 +465,25 @@
       <a class="box-item" href="https://github.com/VishweshPatel"><span>Vishwesh Patel</span></a>
       <a class="box-item" href="https://github.com/adityakumar48"><span>Visinigiri Aditya</span></a>
       <a class="box-item" href="https://github.com/VivekBhand"><span>Vivek Bhand</span></a>
+    </div>
+
+    <h2 id="tag-y">Y</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/yagamipal"><span>Yagami</span></a>
       <a class="box-item" href="https://github.com/yamini236"><span>Yamini Bansal</span></a>
       <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
       <a class="box-item" href="https://github.com/ydegtyar"><span>Yuriy Degtyar</span></a>
       <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a>
+    </div>
+
+    <h2 id="tag-z">Z</h2>
+    <div class="box mx-auto">
       <a class="box-item" href="https://github.com/zaabdn"><span>Zainal Abidin</span></a>
       <a class="box-item" href="https://github.com/Ze-Falcon"><span>Ze Falcon</span></a>
-      <a class="box-item" href="https://github.com/zealptl"><span>Zeal Patel</span></a>
-      <!-- The end of contributor list -->
-
+      <a class="box-item" href="https://github.com/zealptl"><span>Zeal Patel</span></a>      
     </div>
+    <!-- The end of contributor list -->
+
   </div>
   </div>
 
