Revert "Changed the color of header to Golden rod when it is in Dark mode and…"

--- a/Contributors.html
+++ b/Contributors.html
@@ -119,7 +119,7 @@
         <div class="moon">
         </div>
       </div>
-      <p class=" rubberBand delay-4s" style="color: gold;">Add yourself to the list if you contribute.</p>
+      <p class=" rubberBand delay-4s">Add yourself to the list if you contribute.</p>
       <hr style="width:80%">
     </div>
     <div class="box mx-auto">
@@ -367,8 +367,6 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
-      <a class="box-item" href="https://github.com/SanketKurle24"><span>Sanket Kurle</span></a>
-
 
 
 
