--- a/Program's_Contributed_By_Contributors/HTML Designs/Portfolio/index.html
+++ b/Program's_Contributed_By_Contributors/HTML Designs/Portfolio/index.html
@@ -290,7 +290,23 @@ but feel free to shoot me an email as well !</p>
             }
         }
     </script>
-
+<!--adding registration page where user can register and login to know more about the tools and tech stack-->
+<form action="Login.html">   
+		
+    <TABLE BORDER=2 CELLSPACING=10 CELLPADDING=10 style="background-color:green;" height=auto width=400>
+        <tr><th colspan="2" align="center" style="background-color: lightgreen"><h2> Registration </h2></th></tr>
+        <TR> <TD style="background-color: lightgreen">Enter username </TD> 	<TD><input type=text></TD> </TR>
+        <TR> <TD style="background-color: lightgreen">Enter password </TD> 	<TD><input type=password></TD> </TR>
+        <TR> <TD style="background-color: lightgreen">ReEnter password </TD> 	<TD><input type=password></TD> </TR>
+        <TR> <TD style="background-color: lightgreen">Enter email    </TD> 	<TD><input type=email></TD> </TR>
+        <TR> <TD style="background-color: lightgreen">Enter phone    </TD> 	<TD><input type=text></TD> </TR>
+        <TR> <TD style="background-color: lightgreen">Enter birthdate </TD> 	<TD><input type=date></TD> </TR>
+        <tr><th colspan="2" align="center" style="background-color: lightgreen"><a href="Login.html">Login here</a></th></tr>
+        <TR > <TD colspan="2" align="center" style="background-color: lightgreen"><input type=submit value="Registration"></TD> </TR>
+    </TABLE>
+</form>
+ <br>
+ <br>
 
 </body>
 
