--- a/Program's_Contributed_By_Contributors/HTML Designs/Counter App HTML asset/index.html
+++ b/Program's_Contributed_By_Contributors/HTML Designs/Counter App HTML asset/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="/Counter App CSS asset/style.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -23,6 +23,6 @@
 			<br />
 			<h2 id="save-el">People Entered:</h2>
 		</div>
-		<script src="/counter.js"></script>
+		<script src="/Counter App JS asset/counter.js"></script>
 	</body>
 </html>
