--- a/Contributors.html
+++ b/Contributors.html
@@ -367,8 +367,7 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
-
-
+      <a class="box-item" href="https://github.com/Marcelino15"><span>Marcelino Tegar</span></a>
 
           <!-- Please maintain the alignment... -->
 
