--- a/Contributors.html
+++ b/Contributors.html
@@ -367,6 +367,7 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
+      <a class="box-item" href="https://github.com/icodervivek"><span>Vivek Pramanik</span></a>
 
 
 
