Added a JavaScript Function to Count the No. of Contributors

--- a/Contributors.html
+++ b/Contributors.html
@@ -51,7 +51,6 @@
 <body>
 
 
-
   <!-- Back-to-top Button -->
   <button onclick="topFunction()" id="myBtn" title="Go to top">Back to Top</button>
 
@@ -96,23 +95,21 @@
   </nav>
   <div class="content">
     <div class="container">
-      <span class="heading">CONTRIBUTORS </span>
+	
+	 
+      <span class="heading">CONTRIBUTORS</span>
 
       <div class="heart"></div>
       <!-- <label class="theme-switch" for="checkbox">
-
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-sun"
           viewBox="0 0 16 16">
           <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z" />
         </svg>
-
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon"
           viewBox="0 0 16 16">
           <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z" />
         </svg>
-
         <input type="checkbox" class="checkbox" id="checkbox" />
-
         <div class="slider round"></div>
       </label> -->
             <div class="tdnn">
@@ -367,7 +364,7 @@
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
-
+	  <a class="box-item" href="https://github.com/risanlang"><span>Risanlang H</span></a>
 
 
           <!-- Please maintain the alignment... -->
@@ -380,7 +377,9 @@
     </div>
   </div>
   </div>
-
+  <!-- Number of Contributers--->
+  <p> Number of Contributers : </p>
+  <p id="NoC"></p>
   <button id="backToTop" type="button" title="Back to Top">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px"
       y="0px" width="512px" height="512px" viewBox="0 0 284.929 284.929"
@@ -397,6 +396,7 @@
     document.querySelectorAll('a.box-item').forEach(con => {
       console.log(con.href)
       con.innerHTML += `<img src="https://avatars.githubusercontent.com/${con.href.split('https://github.com/')[1]}">`
+	  
     })
     const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
     const currentTheme = localStorage.getItem('theme');
@@ -516,7 +516,15 @@ function topFunction() {
 }
 </script>
 
+<script>
+// numContributer Function will Find the Number of Contributers in this page
+var x = numContributer();
+document.getElementById("NoC").innerHTML = x;
 
+function numContributer() {
+  return  document.querySelectorAll('a.box-item').length;
+}
+</script>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 </body>
