A simple notepad clone

--- a/Program's_Contributed_By_Contributors/JavaScript_Programs/Atul-Kumar-Official/Notepad_Clone/index.html
+++ b/Program's_Contributed_By_Contributors/JavaScript_Programs/Atul-Kumar-Official/Notepad_Clone/index.html
@@ -21,7 +21,7 @@
 
                 <div class="header-action">
                     <button type = "button" class="action-btn">&minus;</button>
-                    <button type = "button" class="action-btn">&rect;</butt>
+                    <button type = "button" class="action-btn" id = "size-changer">&rect;</butt>
                     <button type = "button" class="action-btn" id = "exit">X</button>
                 </div>
             </div>
@@ -35,11 +35,11 @@
 
                 <div class = "modal" id="file-modal">
                     <div class="option">New</div>
-                    <div class="option">Open</div>
+                    <div class="option" id = "open-btn">Open</div>
                     <div class="option" id = "save">Save</div>
                     <div class="option">Page Setup...</div>
                     <div class="option">Print...</div>
-                    <div class="option">Exit</div>
+                    <div class="option" id = "exit-window">Exit</div>
                 </div>
 
                 <div class = "modal" id="edit-modal">
