--- a/Contributors.html
+++ b/Contributors.html
@@ -372,7 +372,7 @@
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
         <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
-
+      <a class="box-item" href="https://github.com/joselito-coder"><span>Joselito Rebelo</span></a>
 
 
 
