--- a/Contributors.html
+++ b/Contributors.html
@@ -371,12 +371,9 @@
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
-        <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
-
-
-
-
-          <!-- Please maintain the alignment... -->
+      <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/RiteshAldak1302"><span>Ritesh Aldak</span></a>
+<!-- Please maintain the alignment... -->
 
 
 
