--- a/Contributors.html
+++ b/Contributors.html
@@ -139,7 +139,7 @@
       <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
       <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
       <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
-<a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
+      <a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
       <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
       <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agarwal</span></a>
       <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
@@ -371,7 +371,8 @@
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
-        <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/alisezisli"><span>Ali Sezişli</span></a>
 
 
 
