java-stack and contributors.html updated

--- a/Contributors.html
+++ b/Contributors.html
@@ -372,9 +372,10 @@
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
         <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/nipunbandara"><span>Nipun Bandara</span></a>
 
 
-
+      
 
           <!-- Please maintain the alignment... -->
 
