added a contributor and cleaned up some comments

--- a/Contributors.html
+++ b/Contributors.html
@@ -371,17 +371,10 @@
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
-        <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/joedag32"><span>joedag32</span></a>
 
-
-
-
-          <!-- Please maintain the alignment... -->
-
-
-
-
-
+      <!-- Please maintain the alignment... -->
 
     </div>
   </div>
