Added name to contributors file

--- a/Contributors.html
+++ b/Contributors.html
@@ -371,12 +371,12 @@
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
-        <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/AayushMohan"><span>Aayush Mohan</span></a>
 
 
 
-
-          <!-- Please maintain the alignment... -->
+        <!-- Please maintain the alignment... -->
 
 
 
