--- a/Contributors.html
+++ b/Contributors.html
@@ -162,6 +162,7 @@
       <a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
       <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
       <a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
+      <a class="box-item" href="https://github.com/rashmi-thakurr"><span>Rashmi Thakur</span></a>
       <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
       <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
       <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
