added Redmaster to Contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -372,6 +372,7 @@
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
         <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/redmasterstudio"><span>Redmaster Ranger</span></a>
 
 
 
