--- a/Contributors.html
+++ b/Contributors.html
@@ -371,6 +371,7 @@
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
+      <a class="box-item" href="https://github.com/RishitToteja"><span>Rishit Toteja</span></a>
         <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
 
 
