--- a/Contributors.html
+++ b/Contributors.html
@@ -373,6 +373,8 @@
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
       <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
       <a class="box-item" href="https://github.com/napster-ansh"><span>Ansh Jain</span></a>
+      <a class="box-item" href="https://github.com/aladharafiq"><span>aladharafiq</span></a>
+
 
 
 
