--- a/Contributors.html
+++ b/Contributors.html
@@ -129,6 +129,7 @@
 
       <!-- Add to the bottom of the list -->
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+      <a class="box-item" href="https://github.com/manalijain346"><span>Manali Jain</span></a>
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
       <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
