--- a/Contributors.html
+++ b/Contributors.html
@@ -357,6 +357,7 @@
       <a class="box-item" href="https://github.com/napster-ansh"><span>Ansh Jain</span></a>
       <a class="box-item" href="https://github.com/smriti2411"><span>Smriti Gupta</span></a>
       <a class="box-item" href="https://github.com/davidtheweiss"><span>David Weiss</span></a>
+      <a class="box-item" href="https://github.com/ChickenNoogit"><span>Andrew Cai</span></a>
 
 
       <!-- Please maintain the alignment... -->
