--- a/Contributors.html
+++ b/Contributors.html
@@ -369,7 +369,7 @@
       <a class="box-item" href="https://github.com/vaishali8799"><span>Vaishali Kasondhan</span></a>
     <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
-
+    <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
 
 
       <!-- Please maintain the alignment... -->
