--- a/Contributors.html
+++ b/Contributors.html
@@ -365,13 +365,13 @@
       <a class="box-item" href="https://github.com/davidtheweiss"><span>David Weiss</span></a>
       <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
       <a class="box-item" href="https://github.com/Sonalanand102"><span>Sonal Anand</span></a>
-    <a class="box-item" href="https://github.com/HarineM"><span>Harine Murugan</span></a>
-    <a class="box-item" href="https://github.com/diwuracreatives"><span>Diwura Creatives</span></a>
-    <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/HarineM"><span>Harine Murugan</span></a>
+      <a class="box-item" href="https://github.com/diwuracreatives"><span>Diwura Creatives</span></a>
+      <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
       <a class="box-item" href="https://github.com/vaishali8799"><span>Vaishali Kasondhan</span></a>
-    <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
-     <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
-
+      <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
+      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
+      <a class="box-item" href="https://github.com/dadoktor8"><span>John Smith</span></a>
 
 
       <!-- Please maintain the alignment... -->
