Added useful data

--- a/Contributors.html
+++ b/Contributors.html
@@ -370,6 +370,7 @@
     <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
+     <a class="box-item" href="https://github.com/nipunsingal7"><span>Nipun Singal</span></a>
 
 
       <!-- Please maintain the alignment... -->
