--- a/Contributors.html
+++ b/Contributors.html
@@ -230,6 +230,7 @@
       <a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>
       <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>
       <a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
+      <a class="box-item" href="https://github.com/suyash0102"><span>Suyash Dahake</span></a>
       <a class="box-item" href="https://github.com/OmanshArora"><span>Omansh</span></a>
       <a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
       <a class="box-item" href="https://github.com/rishabhrathore055"><span>Rishabh Rathore</span></a>
