--- a/Contributors.html
+++ b/Contributors.html
@@ -117,6 +117,7 @@
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
       <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
+      <a class="box-item" href="https://github.com/Mridul2820"><span>Mridul Panda</span></a>
       <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
       <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
       <a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
