--- a/Contributors.html
+++ b/Contributors.html
@@ -372,6 +372,7 @@
      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
+    <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
 
 
       <!-- Please maintain the alignment... -->
