--- a/Contributors.html
+++ b/Contributors.html
@@ -210,7 +210,7 @@
       <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
       <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya Chopra</span></a>
       <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
-       <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
+      <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
       <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
       <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
       <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
@@ -364,14 +364,15 @@
       <a class="box-item" href="https://github.com/davidtheweiss"><span>David Weiss</span></a>
       <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
       <a class="box-item" href="https://github.com/Sonalanand102"><span>Sonal Anand</span></a>
-    <a class="box-item" href="https://github.com/HarineM"><span>Harine Murugan</span></a>
-    <a class="box-item" href="https://github.com/diwuracreatives"><span>Diwura Creatives</span></a>
-    <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
+      <a class="box-item" href="https://github.com/HarineM"><span>Harine Murugan</span></a>
+      <a class="box-item" href="https://github.com/diwuracreatives"><span>Diwura Creatives</span></a>
+      <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
       <a class="box-item" href="https://github.com/vaishali8799"><span>Vaishali Kasondhan</span></a>
-    <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
-     <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
-    <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
-    <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
+      <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
+      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
+      <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
+      <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
+      <a class="box-item" href="https://github.com/santosh50"><span>Santosh Vasisht</span></a>
 
 
       <!-- Please maintain the alignment... -->
