--- a/Program's_Contributed_By_Contributors/Python_Programs/Contributors.html
+++ b/Program's_Contributed_By_Contributors/Python_Programs/Contributors.html
@@ -139,7 +139,7 @@
       <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
       <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
       <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
-<a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
+      <a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
       <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
       <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agarwal</span></a>
       <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
@@ -374,6 +374,7 @@
       <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
       <a class="box-item" href="https://github.com/napster-ansh"><span>Ansh Jain</span></a>
       <a class="box-item" href="https://github.com/YASH4801"><span>Yash Narang</span></a>
+      <a class="box-item" href="https://github.com/santosh50"><span>Santosh Vasisht</span></a>
 
 
           <!-- Please maintain the alignment... -->
